--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "serverless-offline": "^12.0.4",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "dotenv": "^16.0.3",
+    "joi": "^17.7.0"
   }
 }
