--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@libs/*": ["src/libs/*"]
+      "@libs/*": ["src/libs/*"],
+      "@middleware/*": ["src/middleware/*"]
     }
   }
 }
