--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@aws-sdk/s3-presigned-post": "^3.245.0",
     "@middy/core": "^4.1.0",
     "@middy/http-cors": "^4.1.0",
     "@middy/http-json-body-parser": "^4.1.0",
@@ -37,6 +38,7 @@
     "dotenv": "^16.0.3",
     "http-errors": "^2.0.0",
     "joi": "^17.7.0",
-    "jsonwebtoken": "^9.0.0"
+    "jsonwebtoken": "^9.0.0",
+    "nanoid": "^4.0.0"
   }
 }
